[gd_scene load_steps=7 format=3 uid="uid://cy04nuesstfd0"]

[ext_resource type="Script" path="res://ui/scripts/esc_menu/esc_menu.gd" id="1_7fom1"]
[ext_resource type="Script" path="res://ui/scripts/esc_menu/button_main_menu.gd" id="2_rk308"]
[ext_resource type="Script" path="res://ui/scripts/esc_menu/button_world.gd" id="3_4cyhs"]
[ext_resource type="Script" path="res://ui/scripts/esc_menu/button_world_editor.gd" id="4_a8teg"]
[ext_resource type="Script" path="res://ui/scripts/esc_menu/button_prefab_editor.gd" id="5_os3we"]

[sub_resource type="Theme" id="Theme_1ukom"]

[node name="EscMenu" type="Control" node_paths=PackedStringArray("button_main_menu", "button_world", "button_world_editor", "button_prefab_editor", "button_exit_game")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_1ukom")
script = ExtResource("1_7fom1")
button_main_menu = NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonMainMenu")
button_world = NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonWorld")
button_world_editor = NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonWorldEditor")
button_prefab_editor = NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonPrefabEditor")
button_exit_game = NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonExitGame")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -73.0
offset_right = 60.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="ButtonMainMenu" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"
script = ExtResource("2_rk308")

[node name="ButtonWorld" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "GO TO WORLD"
script = ExtResource("3_4cyhs")

[node name="ButtonWorldEditor" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "WORLD EDITOR"
script = ExtResource("4_a8teg")

[node name="ButtonPrefabEditor" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PREFAB EDITOR"
script = ExtResource("5_os3we")

[node name="ButtonExitGame" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT GAME"
script = ExtResource("5_os3we")

[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonWorld" to="." method="_on_button_world_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonWorldEditor" to="." method="_on_button_world_editor_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonPrefabEditor" to="." method="_on_button_prefab_editor_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonExitGame" to="." method="_on_button_exit_game_pressed"]
